<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.AddNoteActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/create_new_note"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_add_note"
            android:inputType="textShortMessage|textLongMessage"
            android:autofillHints="field for title"/>

        <EditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:autofillHints="field for note"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/note_add_note"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/create_note_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_note" />

</LinearLayout>


<include layout="@layout/content_add_note" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>